build/log/idf_py_stdout_output_26696
[0/1] Re-running CMake...
-- Minimal build - ON
-- Building ESP-IDF components for target esp32
-- Project sdkconfig file /home/fabricio/esp/examples/test/sdkconfig
-- Compiler supported targets: xtensa-esp-elf
-- App "test" version: v5.5-dev-1050-gb5ac4fbdf9-dirty
-- Adding linker script /home/fabricio/esp/examples/test/build/esp-idf/esp_system/ld/memory.ld
-- Adding linker script /home/fabricio/esp/examples/test/build/esp-idf/esp_system/ld/sections.ld.in
-- Adding linker script /home/fabricio/esp/components/esp_rom/esp32/ld/esp32.rom.ld
-- Adding linker script /home/fabricio/esp/components/esp_rom/esp32/ld/esp32.rom.api.ld
-- Adding linker script /home/fabricio/esp/components/esp_rom/esp32/ld/esp32.rom.libgcc.ld
-- Adding linker script /home/fabricio/esp/components/esp_rom/esp32/ld/esp32.rom.newlib-data.ld
-- Adding linker script /home/fabricio/esp/components/esp_rom/esp32/ld/esp32.rom.syscalls.ld
-- Adding linker script /home/fabricio/esp/components/esp_rom/esp32/ld/esp32.rom.libc-funcs.ld
-- Adding linker script /home/fabricio/esp/components/esp_rom/esp32/ld/esp32.rom.newlib-reent-funcs.ld
-- Adding linker script /home/fabricio/esp/components/soc/esp32/ld/esp32.peripherals.ld
-- Components: app_update bootloader bootloader_support cxx efuse esp_app_format esp_bootloader_format esp_coex esp_common esp_driver_gpio esp_driver_uart esp_driver_usb_serial_jtag esp_event esp_hw_support esp_mm esp_netif esp_netif_stack esp_partition esp_phy esp_pm esp_ringbuf esp_rom esp_security esp_system esp_timer esp_vfs_console esp_wifi esptool_py freertos hal heap log lwip main mbedtls newlib nvs_flash partition_table pthread soc spi_flash vfs wpa_supplicant xtensa
-- Component paths: /home/fabricio/esp/components/app_update /home/fabricio/esp/components/bootloader /home/fabricio/esp/components/bootloader_support /home/fabricio/esp/components/cxx /home/fabricio/esp/components/efuse /home/fabricio/esp/components/esp_app_format /home/fabricio/esp/components/esp_bootloader_format /home/fabricio/esp/components/esp_coex /home/fabricio/esp/components/esp_common /home/fabricio/esp/components/esp_driver_gpio /home/fabricio/esp/components/esp_driver_uart /home/fabricio/esp/components/esp_driver_usb_serial_jtag /home/fabricio/esp/components/esp_event /home/fabricio/esp/components/esp_hw_support /home/fabricio/esp/components/esp_mm /home/fabricio/esp/components/esp_netif /home/fabricio/esp/components/esp_netif_stack /home/fabricio/esp/components/esp_partition /home/fabricio/esp/components/esp_phy /home/fabricio/esp/components/esp_pm /home/fabricio/esp/components/esp_ringbuf /home/fabricio/esp/components/esp_rom /home/fabricio/esp/components/esp_security /home/fabricio/esp/components/esp_system /home/fabricio/esp/components/esp_timer /home/fabricio/esp/components/esp_vfs_console /home/fabricio/esp/components/esp_wifi /home/fabricio/esp/components/esptool_py /home/fabricio/esp/components/freertos /home/fabricio/esp/components/hal /home/fabricio/esp/components/heap /home/fabricio/esp/components/log /home/fabricio/esp/components/lwip /home/fabricio/esp/examples/test/main /home/fabricio/esp/components/mbedtls /home/fabricio/esp/components/newlib /home/fabricio/esp/components/nvs_flash /home/fabricio/esp/components/partition_table /home/fabricio/esp/components/pthread /home/fabricio/esp/components/soc /home/fabricio/esp/components/spi_flash /home/fabricio/esp/components/vfs /home/fabricio/esp/components/wpa_supplicant /home/fabricio/esp/components/xtensa
-- Configuring done
-- Generating done
-- Build files have been written to: /home/fabricio/esp/examples/test/build
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/fabricio/esp/examples/test/build/bootloader/esp-idf/esptool_py && /home/fabricio/.espressif/python_env/idf5.5_py3.11_env/bin/python /home/fabricio/esp/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/fabricio/esp/examples/test/build/bootloader/bootloader.bin
Bootloader binary size 0x6600 bytes. 0xa00 bytes (9%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/scan.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/scan.c.obj 
/home/fabricio/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-1050-gb5ac4fbdf9-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/fabricio/esp/examples/test/build/config -I/home/fabricio/esp/examples/test/main -I/home/fabricio/esp/components/newlib/platform_include -I/home/fabricio/esp/components/freertos/config/include -I/home/fabricio/esp/components/freertos/config/include/freertos -I/home/fabricio/esp/components/freertos/config/xtensa/include -I/home/fabricio/esp/components/freertos/FreeRTOS-Kernel/include -I/home/fabricio/esp/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/fabricio/esp/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/fabricio/esp/components/freertos/esp_additions/include -I/home/fabricio/esp/components/esp_hw_support/include -I/home/fabricio/esp/components/esp_hw_support/include/soc -I/home/fabricio/esp/components/esp_hw_support/include/soc/esp32 -I/home/fabricio/esp/components/esp_hw_support/dma/include -I/home/fabricio/esp/components/esp_hw_support/ldo/include -I/home/fabricio/esp/components/esp_hw_support/debug_probe/include -I/home/fabricio/esp/components/esp_hw_support/mspi_timing_tuning/include -I/home/fabricio/esp/components/esp_hw_support/port/esp32/. -I/home/fabricio/esp/components/esp_hw_support/port/esp32/include -I/home/fabricio/esp/components/heap/include -I/home/fabricio/esp/components/heap/tlsf -I/home/fabricio/esp/components/log/include -I/home/fabricio/esp/components/soc/include -I/home/fabricio/esp/components/soc/esp32 -I/home/fabricio/esp/components/soc/esp32/include -I/home/fabricio/esp/components/soc/esp32/register -I/home/fabricio/esp/components/hal/platform_port/include -I/home/fabricio/esp/components/hal/esp32/include -I/home/fabricio/esp/components/hal/include -I/home/fabricio/esp/components/esp_rom/include -I/home/fabricio/esp/components/esp_rom/esp32/include -I/home/fabricio/esp/components/esp_rom/esp32/include/esp32 -I/home/fabricio/esp/components/esp_rom/esp32 -I/home/fabricio/esp/components/esp_common/include -I/home/fabricio/esp/components/esp_system/include -I/home/fabricio/esp/components/esp_system/port/soc -I/home/fabricio/esp/components/esp_system/port/include/private -I/home/fabricio/esp/components/xtensa/esp32/include -I/home/fabricio/esp/components/xtensa/include -I/home/fabricio/esp/components/xtensa/deprecated_include -I/home/fabricio/esp/components/lwip/include -I/home/fabricio/esp/components/lwip/include/apps -I/home/fabricio/esp/components/lwip/include/apps/sntp -I/home/fabricio/esp/components/lwip/lwip/src/include -I/home/fabricio/esp/components/lwip/port/include -I/home/fabricio/esp/components/lwip/port/freertos/include -I/home/fabricio/esp/components/lwip/port/esp32xx/include -I/home/fabricio/esp/components/lwip/port/esp32xx/include/arch -I/home/fabricio/esp/components/lwip/port/esp32xx/include/sys -I/home/fabricio/esp/components/esp_wifi/include -I/home/fabricio/esp/components/esp_wifi/include/local -I/home/fabricio/esp/components/esp_wifi/wifi_apps/include -I/home/fabricio/esp/components/esp_wifi/wifi_apps/nan_app/include -I/home/fabricio/esp/components/esp_event/include -I/home/fabricio/esp/components/esp_phy/include -I/home/fabricio/esp/components/esp_phy/esp32/include -I/home/fabricio/esp/components/esp_netif/include -I/home/fabricio/esp/components/nvs_flash/include -I/home/fabricio/esp/components/esp_partition/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/fabricio/esp/examples/test=. -fmacro-prefix-map=/home/fabricio/esp=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/scan.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/scan.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/scan.c.obj -c /home/fabricio/esp/examples/test/main/scan.c
/home/fabricio/esp/examples/test/main/scan.c: In function 'wifi_scan':
/home/fabricio/esp/examples/test/main/scan.c:56:9: error: implicit declaration of function 'print_auth_mode' [-Wimplicit-function-declaration]
   56 |         print_auth_mode(ap_info[i].authmode);
      |         ^~~~~~~~~~~~~~~
/home/fabricio/esp/examples/test/main/scan.c:58:13: error: implicit declaration of function 'print_cipher_type' [-Wimplicit-function-declaration]
   58 |             print_cipher_type(ap_info[i].pairwise_cipher, ap_info[i].group_cipher);
      |             ^~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
